# tonic-example

./: Cargo.toml  build.rs
proto/: trader.proto  user.proto
src/: client.rs  server.rs
