[package]
edition = "2021"
name = "tonic-example"
version = "0.1.0"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "user-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "user-client"
path = "src/client.rs"

[dependencies]
prost = "0.9"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
